<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@drawable/black_border"
    android:orientation="horizontal"
    android:padding="5dp">

    <TextView
        android:id="@+id/keyWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/textview" />

    <ImageButton
        android:id="@+id/editKeywordButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/pencil"
        android:contentDescription="@string/edit_keyword" />

    <ImageButton
        android:id="@+id/deleteKeywordButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/delete"
        android:contentDescription="@string/delete_keyword" />


</LinearLayout>