<!--<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="wrap_content">-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:background="@drawable/white_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="0dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/queryTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:background="@drawable/rounded_gray_border"
            android:textSize="20sp"
            android:text="@string/title" />

        <ImageButton
            android:id="@+id/editQueryTitleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/edit_query_title"
            android:src="@drawable/pencil" />

        <ImageButton
            android:id="@+id/deleteQueryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/delete_query"
            android:src="@drawable/delete" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/queryOnOffSwitch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/saved_query"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="(GTX AND RTX)"
            android:visibility="gone" />

<!--        <androidx.recyclerview.widget.RecyclerView-->
<!--            android:id="@+id/searchColumnRecyclerView"-->
<!--            android:layout_width="wrap_content"-->
<!--            -->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="vertical">-->

<!--        </androidx.recyclerview.widget.RecyclerView>-->

        <ImageButton
            android:id="@+id/dropdown_query"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/white_background"
            android:src="@drawable/chevron_down"
            android:contentDescription="@string/open_selected_query" />

        <ImageButton
            android:id="@+id/close_query"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center"
            android:background="@drawable/white_background"
            android:src="@drawable/chevron_up"
            android:contentDescription="@string/open_selected_query" />


        <!--        <Button-->
<!--            android:id="@+id/addColumnButton"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/create_keyword" />-->

    </LinearLayout>

</LinearLayout>